tests/machine/x/python/order_by_map.py
# Generated by Mochi Python compiler
from __future__ import annotations
from typing import Any, TypeVar, Generic, Callable

T = TypeVar("T")
K = TypeVar("K")


def _sort_key(k):
    if isinstance(k, (list, tuple, dict)):
        return str(k)
    return k


data: list[dict[str, int]] = [{"a": 1, "b": 2}, {"a": 1, "b": 1}, {"a": 0, "b": 5}]
_sorted: list[dict[str, int]] = [
    x
    for x in sorted(
        [x for x in data], key=lambda x: _sort_key({"a": x["a"], "b": x["b"]})
    )
]
print(_sorted)
